--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
     <link rel="icon" href="favicon-device.svg" type="image/svg">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -18,7 +19,8 @@
           <ul class="menu-list">
             <li class="menu-item menu-search">
               <form class="menu-form-search">
-                <p class="search"><input type="search" name="q" placeholder="Поиск по сайту">
+                <p class="search">
+                  <input class="search-type" type="search" name="q" placeholder="Текст поиска">
                   <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none">
                     <path fill="#000"
                       d="m15.7 14.3-3.1-3.1C13.5 10 14 8.6 14 7c0-3.9-3.1-7-7-7S0 3.1 0 7s3.1 7 7 7c1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7c0-2.8 2.2-5 5-5s5 2.2 5 5-2.2 5-5 5-5-2.2-5-5Z" />
