--- a/index.html
+++ b/index.html
@@ -125,7 +125,9 @@
                         лазером,
                         замаскированным под стандартную камеру.
                       </p>
-                      <a class="button button-slider" href="#">Подробнее</a>
+                      <a class="button button-slider" href="#">
+                        <span class="button-text">Подробнее</span>
+                      </a>
                       <ul class="slider-specification-list">
                         <li class="slider-specification-item">
                           <b class="specification-parameter">800 м</b>
@@ -147,7 +149,9 @@
                   <p class="slider-description">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать
                     занятия и соблюдать диету.
                   </p>
-                  <a class="button button-slider" href="#">Подробнее</a>
+                  <a class="button button-slider" href="#">
+                    <span class="button-text">Подробнее</span>
+                  </a>
                   <ul class="slider-specification-list">
                     <li class="slider-specification-item">
                       <b class="specification-parameter">48 часов</b>
@@ -164,7 +168,9 @@
                     (Восемь,
                     Карл!) метров длиной и весом всего 5 кг.
                   </p>
-                  <a class="button button-slider" href="#">Подробнее</a>
+                  <a class="button button-slider" href="#">
+                    <span class="button-text">Подробнее</span>
+                  </a>
                   <ul class="slider-specification-list">
                     <li class="slider-specification-item">
                       <b class="specification-parameter">8,5 м</b>
@@ -207,34 +213,47 @@
         <section class="catalog-sorting">
           <h2 class="visually-hidden">Каталог</h2>
           <ul class="catalog-sorting-list">
-            <li class="catalog-sorting-item">
+            <li class="catalog-sorting-item catalog-sorting-first">
               <a href="#" class="catalog-sorting-link">
-                <span class="catalog-sorting-title">Виртуальная реальность</span>
+                <div class="catalog-link-container">
+                  <span class="catalog-sorting-title">Виртуальная реальность</span>
+                </div>
               </a>
             </li>
-            <li class="catalog-sorting-item">
+            <li class="catalog-sorting-item catalog-sorting-second">
               <a href="catalog.html" class="catalog-sorting-link">
-                <span class="catalog-sorting-title">Моноподы для селфи</span>
+                <div class="catalog-link-container">
+                  <span class="catalog-sorting-title">Моноподы <br>для
+                    селфи</span>
+                </div>
               </a>
             </li>
-            <li class="catalog-sorting-item">
+            <li class="catalog-sorting-item catalog-sorting-third">
               <a href="#" class="catalog-sorting-link">
-                <span class="catalog-sorting-title">Экшн-камеры</span>
+                <div class="catalog-link-container">
+                  <span class="catalog-sorting-title">Экшн-камеры</span>
+                </div>
               </a>
             </li>
-            <li class="catalog-sorting-item">
+            <li class="catalog-sorting-item catalog-sorting-fourth">
               <a href="#" class="catalog-sorting-link">
-                <span class="catalog-sorting-title">Фитнес-браслеты</span>
+                <div class="catalog-link-container">
+                  <span class="catalog-sorting-title">Фитнес-браслеты</span>
+                </div>
               </a>
             </li>
-            <li class="catalog-sorting-item">
+            <li class="catalog-sorting-item catalog-sorting-fifth">
               <a href="#" class="catalog-sorting-link">
-                <span class="catalog-sorting-title">Умные часы</span>
+                <div class="catalog-link-container">
+                  <span class="catalog-sorting-title">Умные часы</span>
+                </div>
               </a>
             </li>
-            <li class="catalog-sorting-item">
+            <li class="catalog-sorting-item catalog-sorting-sixth">
               <a href="#" class="catalog-sorting-link">
-                <span class="catalog-sorting-title">Квадрокоптеры</span>
+                <div class="catalog-link-container">
+                  <span class="catalog-sorting-title">Квадрокоптеры</span>
+                </div>
               </a>
             </li>
           </ul>
@@ -244,32 +263,38 @@
           <div class="delivery-navigation-container">
             <ul class="delivery-navigation-list">
               <li class="delivery-navigation-item">
-                <a href="#" class="button delivery-navigation-link delivery-navigation-link-active">Доставка</a>
+                <a href="#" class="button button-service delivery-navigation-link-active">
+                  <span class="button-text">Доставка</span>
+                </a>
               </li>
               <li class="delivery-navigation-item">
-                <a href="#" class="button delivery-navigation-link">Гарантия</a>
+                <a href="#" class="button button-service">
+                  <span class="button-text">Гарантия</span>
+                </a>
               </li>
               <li class="delivery-navigation-item">
-                <a href="#" class="button delivery-navigation-link">Кредит</a>
+                <a href="#" class="button button-service">
+                  <span class="button-text">Кредит</span>
+                </a>
               </li>
             </ul>
           </div>
           <ul class="delivery-slider">
-            <li class="delivery-slider-item delivery-slider-item-active">
+            <li class="delivery-slider-item delivery delivery-slider-item-active">
               <h3 class="delivery-slider-title">Доставка</h3>
               <p class="delivery-description">Мы с удовольствием доставим ваш товар прямо<br>
                 к вашему подъезду совершенно бесплатно! Ведь<br>
                 мы неплохо заработаем, поднимая его на ваш этаж.
               </p>
             </li>
-            <li class="delivery-slider-item">
+            <li class="delivery-slider-item guarantee">
               <h3 class="delivery-slider-title">Гарантия</h3>
               <p class="delivery-description">Если из-за возгорания купленного у нас товара у вас
                 сгорит дом — не переживайте, мы выдадим вам новый.
                 Товар, не дом, конечно же.
               </p>
             </li>
-            <li class="delivery-slider-item">
+            <li class="delivery-slider-item credit">
               <h3 class="delivery-slider-title">Кредит</h3>
               <p class="delivery-description">Залезть в долговую яму стало проще!
                 Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
@@ -288,55 +313,65 @@
         <div class="information">
           <section class="information-about">
             <h2 class="information-title">О нас</h2>
-            <p class="information-description">Огромный выбор гаджетов не оставит равнодушным гика, который есть в
+            <p class="information-description">Огромный выбор гаджетов не оставит равнодушным<br> гика, который есть в
               каждом из нас.
             </p>
-            <p class="information-description">Мы можем доставить ваш товар в самые отдалённые уголки России
+            <p class="information-description">Мы можем доставить ваш товар в самые отдалённые<br> уголки России
               транспортными компаниями:</p>
             <ul class="information-description information-list">
               <li class="information-item">Меловые линии</li>
               <li class="information-item">СДИК</li>
               <li class="information-item">ТоксБерри</li>
             </ul>
-            <a href="#" class="button information-link">Подробнее о нас</a>
+            <a href="#" class="button button-information">
+              <span class="button-text">Подробнее о нас</span>
+            </a>
           </section>
           <section class="information-contacts">
             <h2 class="information-title">Контакты</h2>
-            <p class="information-description">Вы можете забрать товар сами, заехав в наш офис.
+            <p class="information-description">Вы можете забрать товар сами, заехав в наш офис. <br>
               Заодно сможете проверить работоспособность покупки. </p>
             <ul class="information-list-contacns">
               <li class="information-item-contacns">
-                <h3 class="information-item-contacns contacts-title">Интернет-магазин «Девайс»</h3>
-                <p class="information-description">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+                <h3 class="information-item-title">Интернет-магазин «Девайс»</h3>
+                <p class="information-adresse">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
                 <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
               </li>
               <li class="information-item-contacns">
-                <h3 class="information-schedule">Время работы</h3>
+                <h3 class="information-item-title">Время работы</h3>
                 <ul class="information-schedule-list">
                   <li class="information-schedule-item">пн—пт: с 10:00 до 22:00</li>
                   <li class="information-schedule-item">сб—вс: с 10:00 до 19:00</li>
                 </ul>
               </li>
               <li class="information-item-contacns">
-                <a href="#" class="button information-link">Напишите нам</a>
+                <a href="#" class="button information-link">
+                  <span class="button-text">Напишите нам</span>
+                </a>
               </li>
             </ul>
           </section>
         </div>
         <section class="notification">
-          <h2 class="notification-title">
-            Подпишитесь на рассылку
-          </h2>
-          <p class="notification-description">Еженедельный дайджест с обзорами новинок,
-            длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.
-          </p>
-          <form action="https://echo.htmlacademy.ru/" method="post" class="notification-form">
-            <input class="notification-input" type="text" name="email" placeholder="Ваш e-mail" required>
-            <button class="button submit-description" type="submit">
-              Подписаться
-            </button>
-          </form>
-          <span class="notification-comment">Это бесплатно</span>
+          <div class="notification-wrapper">
+            <div class="notification-wrapper-description">
+              <h2 class="notification-title">
+                Подпишитесь <br> на рассылку
+              </h2>
+              <p class="notification-description">Еженедельный дайджест с обзорами новинок,
+                <br> длительными тест-драйвами, распаковками, а также акции, <br> спецпредложения и вот это вот всё.
+              </p>
+            </div>
+            <div class="notification-wrapper-form">
+              <form action="https://echo.htmlacademy.ru/" method="post" class="notification-form">
+                <input class="notification-input" type="text" name="email" placeholder="Ваш e-mail" required>
+                <button class="submit-description" type="submit">
+                  <span class="button-text">Подписаться</span>
+                </button>
+              </form>
+              <span class="notification-comment">Это бесплатно</span>
+            </div>
+          </div>
         </section>
 
       </main>
