--- a/index.html
+++ b/index.html
@@ -258,51 +258,52 @@
             </li>
           </ul>
         </section>
-        <section class="delivery">
+        <section class="service">
           <h2 class="delivery-title visually-hidden">Доставка</h2>
-          <div class="delivery-navigation-container">
-            <ul class="delivery-navigation-list">
-              <li class="delivery-navigation-item">
-                <a href="#" class="button button-service delivery-navigation-link-active">
-                  <span class="button-text">Доставка</span>
-                </a>
+          <div class="service-container">
+            <div class="delivery-navigation-container">
+              <ul class="delivery-navigation-list">
+                <li class="delivery-navigation-item">
+                  <a href="#" class="button button-service delivery-navigation-link-active">
+                    <span class="button-text">Доставка</span>
+                  </a>
+                </li>
+                <li class="delivery-navigation-item">
+                  <a href="#" class="button button-service">
+                    <span class="button-text">Гарантия</span>
+                  </a>
+                </li>
+                <li class="delivery-navigation-item">
+                  <a href="#" class="button button-service">
+                    <span class="button-text">Кредит</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <ul class="delivery-slider">
+              <li class="delivery-slider-item delivery delivery-slider-item-active">
+                <h3 class="delivery-slider-title">Доставка</h3>
+                <p class="delivery-description">Мы с удовольствием доставим ваш товар прямо<br>
+                  к вашему подъезду совершенно бесплатно! Ведь<br>
+                  мы неплохо заработаем, поднимая его на ваш этаж.
+                </p>
               </li>
-              <li class="delivery-navigation-item">
-                <a href="#" class="button button-service">
-                  <span class="button-text">Гарантия</span>
-                </a>
+              <li class="delivery-slider-item guarantee">
+                <h3 class="delivery-slider-title">Гарантия</h3>
+                <p class="delivery-description">Если из-за возгорания купленного у нас товара у вас
+                  сгорит дом — не переживайте, мы выдадим вам новый.
+                  Товар, не дом, конечно же.
+                </p>
               </li>
-              <li class="delivery-navigation-item">
-                <a href="#" class="button button-service">
-                  <span class="button-text">Кредит</span>
-                </a>
+              <li class="delivery-slider-item credit">
+                <h3 class="delivery-slider-title">Кредит</h3>
+                <p class="delivery-description">Залезть в долговую яму стало проще!
+                  Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
+                  Выгодные для банка, разумеется.
+                </p>
               </li>
             </ul>
           </div>
-          <ul class="delivery-slider">
-            <li class="delivery-slider-item delivery delivery-slider-item-active">
-              <h3 class="delivery-slider-title">Доставка</h3>
-              <p class="delivery-description">Мы с удовольствием доставим ваш товар прямо<br>
-                к вашему подъезду совершенно бесплатно! Ведь<br>
-                мы неплохо заработаем, поднимая его на ваш этаж.
-              </p>
-            </li>
-            <li class="delivery-slider-item guarantee">
-              <h3 class="delivery-slider-title">Гарантия</h3>
-              <p class="delivery-description">Если из-за возгорания купленного у нас товара у вас
-                сгорит дом — не переживайте, мы выдадим вам новый.
-                Товар, не дом, конечно же.
-              </p>
-            </li>
-            <li class="delivery-slider-item credit">
-              <h3 class="delivery-slider-title">Кредит</h3>
-              <p class="delivery-description">Залезть в долговую яму стало проще!
-                Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
-                Выгодные для банка, разумеется.
-              </p>
-            </li>
-          </ul>
-
         </section>
         <section class="delivery-uncommon">
           <h2 class="visually-hidden">Доставка редких товаров</h2>
@@ -377,28 +378,29 @@
       </main>
       <footer class="page-footer">
       <div class="footer-container">
+
         <a class="footer-link" href="index.html">
-          <img class="header-logo" src="./images/logo-yellow.svg" alt="Логотип магазина Девайс" width="145" height="36">
+          <img class="header-logo" src="./images/logo-yellow.svg" alt="Логотип магазина Девайс." width="145" height="36">
         </a>
         <div class="footer-center">
-          <div class="footer-adresse">
-            <p class="footer-adresse">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+          <div class="footer-adresse-wrapper">
+            <p class="footer-adresse">Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</p>
           </div>
           <div class="footer-catalog-center">
             <ul class="footer-catalog-list">
               <li class="footer-catalog-item">
-                <a class="navigation-catalog-link" href="#">Доставка</a>
+                <a class="footer-catalog-link" href="#">Доставка</a>
               </li>
               <li class="footer-catalog-item">
-                <a class="navigation-catalog-link" href="#">Гарантия</a>
+                <a class="footer-catalog-link" href="#">Гарантия</a>
               </li>
               <li class="footer-catalog-item">
-                <a class="navigation-catalog-link" href="#">Контакты</a>
+                <a class="footer-catalog-link" href="#">Контакты</a>
               </li>
             </ul>
           </div>
           <div class="footer-phone-wrap">
-            <a class="footer-phone-link" href="tel:+78128121212">+7 (812) 812-12-12
+            <a class="footer-phone-link" href="tel:+78128121212">Тел.:+7(812) 812-12-12
             </a>
           </div>
         </div>
@@ -406,17 +408,17 @@
           <section class="footer-social">
             <h2 class="visually-hidden" hidden>Социальные сети</h2>
             <ul class="footer-social-list">
-              <li class="footer-social-item">
-                <a class="footer-social-svg" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
-                </a>
-              </li>
-              <li class="footer-social-item">
+              <li class="social-item-telegram">
                 <a class="footer-social-svg" href="https://t.me/htmlacademy ">
                   <span class="visually-hidden">Telegam</span>
                 </a>
               </li>
-              <li class="footer-social-item">
+              <li class="social-item-youtube">
+                <a class="footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Youtube</span>
+                </a>
+              </li>
+              <li class="social-item-twitter">
                 <a class="footer-social-svg" href="https://twitter.com/htmlacademy_ru">
                   <span class="visually-hidden">Twitter</span>
                 </a>
