--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           <div class="user-menu">
             <form class="menu-form-search search" action="https://echo.htmlacademy.ru/">
               <label class="search-type-label" for="search-name">
-                <input class="search-type search-icon" type="search" name="q" placeholder="Поиск по сайту" id="search-name" required>
+                <input class="search-type search-icon" type="search" name="q" placeholder="Поиск по сайту"
+                  id="search-name" required>
               </label>
               <label class="search-type-label" for="search-answer">
                 <input class="search-submit" type="search" value="Найти" id="search-answer" required>
@@ -42,7 +43,26 @@
                   <span class="cart-amount">2</span>
                 </a>
                 <div class="cart-open">
-
+                  <ul class="cart-open-list">
+                    <li class="cart-item">
+                      <a href="#" class="cart-link">
+                        <img src="./images/catalog/selfysteack.jpg" alt="Селфи-палка.">
+                        <p class="cart-item-description">Любительская селфи-палка</p>
+                      </a>
+                      <button class="cart-close-button">
+                        <span class="visually-hidden">Закрыть</span>
+                      </button>
+                    </li>
+                    li class="cart-item">
+                      <a href="#" class="cart-link">
+                        <img src="./images/catalog/selfyprof.jpg" alt="Профессиональная селфи-палка.">
+                        <p class="cart-item-description">Профессиональная селфи-палка</p>
+                      </a>
+                      <button class="cart-close-button">
+                        <span class="visually-hidden">Закрыть</span>
+                      </button>
+                    </li>
+                  </ul>
                 </div>
               </li>
             </ul>
@@ -377,64 +397,64 @@
 
       </main>
       <footer class="page-footer">
-      <div class="footer-container">
-
-        <a class="footer-link" href="index.html">
-          <img class="header-logo" src="./images/logo-yellow.svg" alt="Логотип магазина Девайс." width="145" height="36">
-        </a>
-        <div class="footer-center">
-          <div class="footer-adresse-wrapper">
-            <p class="footer-adresse">Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</p>
+        <div class="footer-container">
+          <a class="footer-link" href="index.html">
+            <img class="header-logo" src="./images/logo-yellow.svg" alt="Логотип магазина Девайс." width="145"
+              height="36">
+          </a>
+          <div class="footer-center">
+            <div class="footer-adresse-wrapper">
+              <p class="footer-adresse">Санкт-Петербург, набережная <br> реки Карповки, 5, литера П.</p>
+            </div>
+            <div class="footer-catalog-center">
+              <ul class="footer-catalog-list">
+                <li class="footer-catalog-item">
+                  <a class="footer-catalog-link" href="#">Доставка</a>
+                </li>
+                <li class="footer-catalog-item">
+                  <a class="footer-catalog-link" href="#">Гарантия</a>
+                </li>
+                <li class="footer-catalog-item">
+                  <a class="footer-catalog-link" href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer-phone-wrap">
+              <a class="footer-phone-link" href="tel:+78128121212">Тел.:+7(812) 812-12-12
+              </a>
+            </div>
           </div>
-          <div class="footer-catalog-center">
-            <ul class="footer-catalog-list">
-              <li class="footer-catalog-item">
-                <a class="footer-catalog-link" href="#">Доставка</a>
-              </li>
-              <li class="footer-catalog-item">
-                <a class="footer-catalog-link" href="#">Гарантия</a>
-              </li>
-              <li class="footer-catalog-item">
-                <a class="footer-catalog-link" href="#">Контакты</a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-phone-wrap">
-            <a class="footer-phone-link" href="tel:+78128121212">Тел.:+7(812) 812-12-12
-            </a>
+          <div class="footer-bottom">
+            <section class="footer-social">
+              <h2 class="visually-hidden" hidden>Социальные сети</h2>
+              <ul class="footer-social-list">
+                <li class="social-item-telegram">
+                  <a class="footer-social-svg" href="https://t.me/htmlacademy ">
+                    <span class="visually-hidden">Telegam</span>
+                  </a>
+                </li>
+                <li class="social-item-youtube">
+                  <a class="footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
+                    <span class="visually-hidden">Youtube</span>
+                  </a>
+                </li>
+                <li class="social-item-twitter">
+                  <a class="footer-social-svg" href="https://twitter.com/htmlacademy_ru">
+                    <span class="visually-hidden">Twitter</span>
+                  </a>
+                </li>
+              </ul>
+            </section>
+            <section class="footer-logo-academy">
+              <h2 class="visually-hidden">Логотип Академии</h2>
+              <a class="footer-logo-academy" href="https://htmlacademy.ru">
+                <span class="visually-hidden">Логотип Академии</span>
+              </a>
+            </section>
           </div>
         </div>
-        <div class="footer-bottom">
-          <section class="footer-social">
-            <h2 class="visually-hidden" hidden>Социальные сети</h2>
-            <ul class="footer-social-list">
-              <li class="social-item-telegram">
-                <a class="footer-social-svg" href="https://t.me/htmlacademy ">
-                  <span class="visually-hidden">Telegam</span>
-                </a>
-              </li>
-              <li class="social-item-youtube">
-                <a class="footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Youtube</span>
-                </a>
-              </li>
-              <li class="social-item-twitter">
-                <a class="footer-social-svg" href="https://twitter.com/htmlacademy_ru">
-                  <span class="visually-hidden">Twitter</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="footer-logo-academy">
-            <h2 class="visually-hidden">Логотип Академии</h2>
-            <a class="footer-logo-academy" href="https://htmlacademy.ru">
-              <span class="visually-hidden">Логотип Академии</span>
-            </a>
-          </section>
-        </div>
-      </div>
       </footer>
-        <div class="modal-container">
+      <div class="modal-container">
         <div class="modal-delivery">
           <button class="modal-close-button">
             <span class="visually-hidden">Закрыть</span>
@@ -466,7 +486,7 @@
                   </p>
                 </button>
                 <button type="button-minus">-</button>
-                  <input type="number" min="1" max="100" value="1" readonly class="raz">
+                <input type="number" min="1" max="100" value="1" readonly class="raz">
                 <button type="button-plus">+</button>
               </div>
             </div>
