--- a/catalog.html
+++ b/catalog.html
@@ -188,7 +188,7 @@
                   </button>
                 </div>
                 <div class="range-input-wrapper">
-                  <div class="range-input-min">
+                  <div class="range-input-min" tabindex="0">
                     <span class="range-label">от</span>
                     <input type="text" class="range-value" value="0">
                   </div>
@@ -373,17 +373,17 @@
           <section class="footer-social">
             <h2 class="visually-hidden" hidden>Социальные сети</h2>
             <ul class="footer-social-list">
-              <li class="social-item-telegram">
+              <li class="social-item social-item-telegram">
                 <a class="footer-social-svg" href="https://t.me/htmlacademy ">
                   <span class="visually-hidden">Telegam</span>
                 </a>
               </li>
-              <li class="social-item-youtube">
+              <li class="social-item social-item-youtube">
                 <a class="footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">Youtube</span>
                 </a>
               </li>
-              <li class="social-item-twitter">
+              <li class="social-item social-item-twitter">
                 <a class="footer-social-svg" href="https://twitter.com/htmlacademy_ru">
                   <span class="visually-hidden">Twitter</span>
                 </a>
