--- a/index.html
+++ b/index.html
@@ -307,12 +307,12 @@
                 </a>
               </li>
               <li class="delivery-navigation-item">
-                <a href="#" class="button button-service">
+                <a href="#" class="button button-service button-guarantee">
                   <span class="button-text">Гарантия</span>
                 </a>
               </li>
               <li class="delivery-navigation-item">
-                <a href="#" class="button button-service">
+                <a href="#" class="button button-service button-credit">
                   <span class="button-text">Кредит</span>
                 </a>
               </li>
@@ -446,17 +446,17 @@
           <section class="footer-social">
             <h2 class="visually-hidden" hidden>Социальные сети</h2>
             <ul class="footer-social-list">
-              <li class="social-item-telegram">
+              <li class="social-item social-item-telegram">
                 <a class="footer-social-svg" href="https://t.me/htmlacademy ">
                   <span class="visually-hidden">Telegam</span>
                 </a>
               </li>
-              <li class="social-item-youtube">
+              <li class="social-item social-item-youtube">
                 <a class="footer-social-youtube" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">Youtube</span>
                 </a>
               </li>
-              <li class="social-item-twitter">
+              <li class="social-item social-item-twitter">
                 <a class="footer-social-svg" href="https://twitter.com/htmlacademy_ru">
                   <span class="visually-hidden">Twitter</span>
                 </a>
@@ -499,12 +499,14 @@
             </div>
             <div class="modal-button-information">
               <label class="persinfo-title" for="text">Количество:</label>
-              <button class="modal-button">
-                <span class="button-information-description">Постараемся найти, сколько нужно. Привезём сколько получится
-                  по требованиям
-                  к провозу багажа.
-                </span>
-              </button>
+              <div class="modal-button-container">
+                <button class="modal-button">
+                  <span class="button-information-description">Постараемся найти, сколько нужно. Привезём сколько получится
+                    по требованиям
+                    к провозу багажа.
+                  </span>
+                </button>
+              </div>
               <div class="modal-button-quantity">
                 <button class="button-minus-plus button-minus" type="button">-</button>
                 <input class="input-quontity raz" type="number" min="1" max="100" value="1" readonly>
