--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
-    <link rel="icon" href="favicon-device.ico" type="image/ico">
+    <link rel="icon" href="favicon-device.png" type="image/png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
