--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </ul>
           </div>
           <div class="footer-phone-wrap">
-            <a class="footer-phone-link" href="tel:+78128121212">Тел.:+7(812) 812-12-12</a>
+            <a class="footer-phone-link" href="tel:+78128121212">Тел.: +7 (812) 812-12-12</a>
           </div>
         </div>
         <div class="footer-bottom">
@@ -454,14 +454,14 @@
         <form class="modal-content">
           <h2 class="modal-title">Доставка под заказ</h2>
           <div class="modal-persinfo">
-            <div class="modal-persinfo-name">
+            <div class="modal-persinfo-name input-name">
               <label class="persinfo-title" for="name">Ваше имя:</label>
-              <input class="modal-input input-name" type="text" name="name" placeholder="Введите имя" id="name"
+              <input class="modal-input" type="text" name="name" placeholder="Введите имя" id="name"
                 required>
             </div>
-            <div class="modal-persinfo-mail">
+            <div class="modal-persinfo-mail input-email">
               <label class="persinfo-title" for="email">Ваш e-mail:</label>
-              <input class="modal-input input-mail" type="email" name="mail" placeholder="почта" id="email" required>
+              <input class="modal-input email" type="email" name="mail" placeholder="почта" id="email" required>
               <p class="modal-persinfo-fault">Забавный у вас адрес</p>
             </div>
           </div>
@@ -473,12 +473,13 @@
             </div>
             <div class="modal-button-information">
               <label class="persinfo-title" for="text">Количество:</label>
+
               <div class="modal-button-container">
-                <span class="button-information-description">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям к провозу багажа.</span>
+                <span class="button-information-description">Постараемся найти, сколько нужно. Привезём сколько получится по требованиям <br> к провозу багажа.</span>
               </div>
               <div class="modal-button-quantity">
                 <button class="button-minus-plus button-minus" type="button">-</button>
-                <input class="input-quontity raz" type="number" min="1" max="100" value="1" readonly>
+                <input class="input-quantity" type="number" min="1" max="100" value="1"required>
                 <button class="button-minus-plus button-plus" type="button">+</button>
               </div>
             </div>
